delete da tela de controle financeiro e adição do convênio no cadastro paciente

--- a/LabProject/src/telas/telaCadastroFuncionario.form
+++ b/LabProject/src/telas/telaCadastroFuncionario.form
@@ -96,10 +96,7 @@
                                                       <Component id="rbtnMasculino" min="-2" max="-2" attributes="0"/>
                                                       <EmptySpace min="-2" pref="23" max="-2" attributes="0"/>
                                                   </Group>
-                                                  <Group type="102" alignment="1" attributes="0">
-                                                      <EmptySpace max="32767" attributes="0"/>
-                                                      <Component id="txtSenha" min="-2" pref="231" max="-2" attributes="0"/>
-                                                  </Group>
+                                                  <Component id="txtSenha" alignment="1" min="-2" pref="231" max="-2" attributes="0"/>
                                               </Group>
                                           </Group>
                                           <Group type="102" alignment="1" attributes="0">
@@ -142,9 +139,9 @@
                   </Group>
                   <EmptySpace type="unrelated" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="0" attributes="0">
-                      <Group type="103" groupAlignment="3" attributes="0">
-                          <Component id="lblSexo" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Group type="103" groupAlignment="0" attributes="0">
                           <Component id="rbtnFeminino" alignment="1" min="-2" max="-2" attributes="0"/>
+                          <Component id="lblSexo" min="-2" max="-2" attributes="0"/>
                       </Group>
                       <Component id="rbtnMasculino" alignment="1" min="-2" max="-2" attributes="0"/>
                   </Group>
@@ -163,7 +160,7 @@
                       <Component id="txtSalario" alignment="3" min="-2" pref="38" max="-2" attributes="0"/>
                       <Component id="lblSalario" alignment="3" min="-2" max="-2" attributes="0"/>
                   </Group>
-                  <EmptySpace pref="44" max="32767" attributes="0"/>
+                  <EmptySpace pref="46" max="32767" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
                       <Component id="btnSalvar" alignment="3" min="-2" pref="57" max="-2" attributes="0"/>
                       <Component id="btnSair" alignment="3" min="-2" pref="57" max="-2" attributes="0"/>
