feat: disable resize of screens

--- a/LabProject/src/telas/telaLogin.form
+++ b/LabProject/src/telas/telaLogin.form
@@ -29,8 +29,8 @@
     <Container class="javax.swing.JPanel" name="pnlLogin">
       <Properties>
         <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
-          <Border info="org.netbeans.modules.form.compat2.border.BevelBorderInfo">
-            <BevelBorder/>
+          <Border info="org.netbeans.modules.form.compat2.border.LineBorderInfo">
+            <LineBorder/>
           </Border>
         </Property>
       </Properties>
@@ -59,7 +59,7 @@
                   <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
               </Group>
               <Group type="102" alignment="1" attributes="0">
-                  <EmptySpace pref="22" max="32767" attributes="0"/>
+                  <EmptySpace pref="24" max="32767" attributes="0"/>
                   <Group type="103" groupAlignment="0" max="-2" attributes="0">
                       <Component id="txtSenha" pref="375" max="32767" attributes="0"/>
                       <Component id="txtLogin" max="32767" attributes="0"/>
