feat: session manager

--- a/LabProject/src/telas/telaContaFuncionario.form
+++ b/LabProject/src/telas/telaContaFuncionario.form
@@ -171,6 +171,9 @@
           </Border>
         </Property>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="txtNomeActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JTextField" name="txtEmail">
       <Properties>
