--- a/LabProject/src/telas/telaCadastroFuncionario.form
+++ b/LabProject/src/telas/telaCadastroFuncionario.form
@@ -303,6 +303,9 @@
               <Format format="###.###.###-##" subtype="-1" type="5"/>
             </Property>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="txtCpfActionPerformed"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JLabel" name="lblSalario">
           <Properties>
